--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@
 }
 
 body {
-  background-color: #f5e3e3;
-  color: #8d3c3c;
+  background-color: #e6ffe6;
+  color: #3c8d3c;
   font-family: "Arimo", sans-serif;
   font-size: 1.5rem;
 }
 
 header {
   padding: 1rem;
-  color: #d37c7c;
-  background-color: #a75252;
+  color: #7cd37c;
+  background-color: #52a752;
   text-align: center;
 }
 
@@ -24,7 +24,7 @@ main {
   padding: 3.5rem;
   display: flex;
   flex-direction: column;
-  color: #d37c7c;
+  color: #7cd37c;
   gap: 2rem;
 }
 
@@ -36,12 +36,12 @@ section {
 
 h2 {
   font-size: 2rem;
-  color: #8d3c3c;
+  color: #3c8d3c;
 }
 
 input[type="radio"],
 input[type="checkbox"] {
-  accent-color: #eab6b6;
+  accent-color: #b6eab6;
 }
 
 input[type="text"],
@@ -49,32 +49,32 @@ input[type="password"],
 input[type="date"] {
   width: 50%;
   padding: 0.6rem;
-  border: 2px solid #eab6b6;
+  border: 2px solid #b6eab6;
   outline: none;
   border-radius: 5px;
   background-color: transparent;
 }
 
 input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #eab6b6;
+  color: #b6eab6;
 }
 input::-moz-placeholder { /* Firefox 19+ */
-  color: #eab6b6;
+  color: #b6eab6;
 }
 input:-ms-input-placeholder { /* IE 10+ */
-  color: #eab6b6;
+  color: #b6eab6;
 }
 input:-moz-placeholder { /* Firefox 18- */
-  color: #eab6b6;
+  color: #b6eab6;
 }
 ::placeholder {
-  color: #eab6b6;
+  color: #b6eab6;
 }
 
 select {
   cursor: pointer;
-  background-color: #eab6b6;
-  color: #360505;
+  background-color: #b6eab6;
+  color: #053605;
   border-radius: 3px;
   border: none;
   outline: none;
@@ -91,33 +91,33 @@ table {
 }
 
 th {
-  background-color: #a75252;
-  color: #eab6b6;
+  background-color: #52a752;
+  color: #b6eab6;
   padding: 0.8rem;
 }
 
 tbody {
-  background-color: #eab6b6;
-  color: #8d3c3c;
+  background-color: #b6eab6;
+  color: #3c8d3c;
   padding: 1rem;
   text-align: center;
 }
 
 tfoot {
-  background-color: #d37c7c;
-  color: #a75252;
+  background-color: #7cd37c;
+  color: #52a752;
   text-align: center;
 }
 
 details {
-  background-color: #eab6b6;
+  background-color: #b6eab6;
   border-radius: 1rem;
   padding: 0.5rem;
   cursor: pointer;
 }
 
 summary {
-  color: #a75252;
+  color: #52a752;
   margin: 0.5rem;
 }
 
@@ -136,30 +136,30 @@ footer {
 }
 
 fieldset {
-  border: 2px solid #d37c7c;
+  border: 2px solid #7cd37c;
   padding: 1rem;
   border-radius: 5px;
 }
 
 legend {
-  color: #d37c7c;
+  color: #7cd37c;
   padding: 0 0.5rem;
 }
 
 textarea {
-  background-color: #eab6b6;
+  background-color: #b6eab6;
   outline: none;
   margin-bottom: 1rem;
   padding: 1rem;
   border-radius: 5px;
-  border: 2px solid #d37c7c;
+  border: 2px solid #7cd37c;
 }
 
 button {
-  background-color: #eab6b6;
+  background-color: #b6eab6;
   border: none;
   padding: 0.6rem;
-  color: #a75252;
+  color: #52a752;
   border-radius: 5px;
   cursor: pointer;
 }
